# Fluidchen-EM

./: .gitignore  CMakeLists.txt  Performance_Analysis.txt  README.md
configs_and_geometries/ChannelWithBFS/: ChannelWithBFS.pgm
configs_and_geometries/ChannelWithObstacle/: ChannelWithObstacle.pgm
configs_and_geometries/FluidTrap/: FluidTrap.pgm
configs_and_geometries/NaturalConvection/: NaturalConvection.pgm
configs_and_geometries/RayleighBenard/: RayleighBenard-long.pgm
docs/images/results_WS2/NaturalConvection/Case2/: T.avi
docs/images/results_WS2/Plane_Shear_Flow/: Velocity.avi
docs/results_WS1/: v.avi
example_cases/ChannelWithObstacle/: ChannelWithObstacle.pgm
example_cases/EMHD-Energy_Coupling/: TempChannel.pgm  precice-config.xml
example_cases/EM_Pump/: EM_Pump.pgm  FluidChannel.pgm  precice-config.xml
example_cases/PlaneShearFlow/: PlaneShearFlow.pgm
example_cases/RayleighBenard/: RayleighBenard.pgm
include/: Boundary.hpp  Case.hpp  Communication.hpp  Discretization.hpp  Domain.hpp  Enums.hpp  Fields.hpp  Grid.hpp  PressureSolver.hpp
results/results_WS1/: u.avi
src/: Boundary.cpp  Case.cpp  Communication.cpp  Discretization.cpp  Fields.cpp  Grid.cpp  PressureSolver.cpp  main.cpp
